# flask-msgspec

./: .gitignore  LICENSE  README.md  pyproject.toml
flask_msgspec/: __init__.py  _serializer.py  _types.py  _utils.py  _validator.py  config.py  core.py  exceptions.py  provider.py
